2006-11-28  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/lang/Double/DoubleTest.java: Added test for
	Double.toString(Double.MIN_VALUE).

	* gnu/testlet/java/lang/Float/FloatTest.java: Added test for 
	Float.toString(Float.MIN_VALUE).

2006-11-28  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/border/TitledBorder/getBorderInsets.java:
	Fixed test for differentiation between font ascent+descent and
	height.

2006-11-28  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/java/beans/PropertyChangeSupport/firePropertyChange.java:
	New test.
	* gnu/testlet/javax/swing/JComponent/putClientProperty.java:
	Added check for how setting a null property fires an event or
	not.

2006-11-27  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/image/Raster/createChild.java
	(createRaster): Add harness parameter, ensure that returned raster
	is not writable.
	(testData): Add check for class of child raster.
	* gnu/testlet/java/awt/image/Raster/MyRaster.java: New file.
	* gnu/testlet/java/awt/image/WritableRaster/createChild.java: New file.

2006-11-27  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/Vector/AcuniaVectorTest.java: Don't demand
	a NullPointerException when doing a removeAll(null) or a
	retainAll(null) on an empty Vector.

2006-11-26  Mark Wielaard  <mark@klomp.org>

	* RunnerProcess.java (getStackTraceString): Use whole exception
	message, not just the class name.

2006-11-26  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/ResourceNotFoundException.java (serialVersionUID):
	Added to fix ecj warning.

2006-11-26  Paul Jenner  <psj@harker.dyndns.org>

	* Makefile.am (harness_files): Add VisualTestlet.java.
	* Makefile.in: Regenerated.

2006-11-26  Raif S. Naffah  <mauve@naffah-raif.name>

	* gnu/testlet/java/util/jar/JarFile/TestOfManifest.java (ENTRYNAME): New field.
	(test): Call checkCertificates().
	(checkCertificates): New method.
	(readEntries): Re-factored to use read1Entry().
	(read1Entry): New method.
