@@ -1,3 +1,9 @@
+2006-12-01  Mario Torre  <neugens@limasoftware.net>
+
+	* gnu/testlet/java/text/DecimalFormat/format.java (testGeneral): 
+	(testLocale): new tests.
+	(test): enable new tests.
+
 2006-11-28  Dalibor Topic  <robilad@kaffe.org>
 
 	* gnu/testlet/java/lang/Double/DoubleTest.java: Added test for
